<resources>
    <string name="app_name">Nomadworks</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register here</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="categories">Categories</string>
    <string name="how_it_works">How it Works</string>
    <string name="our_freelancers">Our freelancers</string>

    <string-array name="categories">
        <item>All categories</item>
        <item>Accounting</item>
        <item>Computers</item>
        <item>House Work</item>
        <item>Mobile Phones</item>
        <item>Office Help</item>
        <item>Programming</item>
        <item>Services</item>
        <item>Skilled</item>
        <item>Utility</item>
    </string-array>
</resources>