<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.activities.Login">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        android:textColor="@color/primary"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <EditText
        android:id="@+id/loginEmailET"
        android:layout_width="263dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintVertical_bias="0.086"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_view"
        android:layout_width="262dp"
        android:layout_height="65dp"
        android:hint="@string/prompt_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmailET"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailET"
        app:layout_constraintVertical_bias="0.09"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPwdET"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:passwordToggleEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_btn_background"
        android:padding="6dp"
        android:text="@string/title_activity_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_password_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_password_view"
        app:layout_constraintTop_toBottomOf="@+id/login_password_view"
        app:layout_constraintVertical_bias="0.177"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/registerHereTV"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.337" />

    <View
        android:id="@+id/hz_login_divider_line_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#7C8798"
        app:layout_constraintBottom_toTopOf="@+id/registerHereTV"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <View
        android:id="@+id/hz_login_underLine_view"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginEnd="16dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/loginEmailET"
        app:layout_constraintEnd_toEndOf="@+id/tvLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintVertical_bias="0.23000002" />
    <ProgressBar
        android:id="@+id/pbLoginLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar_background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>